Fixed form sizes on iPhone

--- a/html/css/style.less
+++ b/html/css/style.less
@@ -2998,6 +2998,11 @@ footer{
 		}
 		
 	#content{
+		> form, > form.small{
+			width: 100%;
+			min-width: 0;
+			}
+			
 		section.small{
 			article{
 				.item-image{
@@ -3043,6 +3048,10 @@ footer{
 		}
 		
 	#content{
+		> form, > form.small{
+			width: 100%;
+			min-width: 0;
+			}
 		
 		section.small{
 			article{
